--- a/start/selectors.css
+++ b/start/selectors.css
@@ -1,35 +1,66 @@
-/* ====================================================== 
-   Practice CSS Selectors 
+/* ======================================================
+   Practice CSS Selectors
 ========================================================= */
 
 /* Change the color of all list items inside an unordered list */
-
+ul li {
+  color: pink;
+}
 
 
 /* Remove the text decoration from navigation links, and change their color when hovered */
-
+nav a:link {
+  text-decoration: none;
+  padding: 5px;
+}
+nav a:hover {
+  color: white;
+  background-color: blue;
+  padding: 5px;
+}
 
 
 /* Create hover and visited styles for all links inside 'main' */
-
+main a:hover {
+  color: red;
+  background-color: grey;
+  padding: 5px;
+}
+main a:visited {
+  color: brown;
+  background-color: black;
+  padding: 5px;
+}
 
 
 /* Change the background color of the submit button when active */
-
+input[type='submit']:active {
+  background-color: red;
+}
 
 
 /* Give the text field a blue border upon focus */
-
+input[type="text"]:focus {
+  border-color: green;
+}
 
 
 /* Give the 'span' tag in the footer a meaningful class name and reduce its font size */
-
+.smaller {
+  font-size: 8pt;
+}
 
 
 /* Give the 'img' tag in the header an ID and set its width to 190px */
-
+#pic {
+  width: 180px;
+}
 
 
 /* Target all heading tags on the page and set their font family to 'Bree Serif', serif */
-
-
+h1,
+h2,
+h3
+{
+  font-family: 'Bree serif', serif;
+}
